app/minecraft/server/namespace.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.minecraft.namespace
  labels:
    name: #@ data.values.minecraft.namespace
