app/minecraft/server/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft
  namespace: #@ data.values.minecraft.namespace
spec:
  entryPoints:
    - http
  routes:
    - match: HostSNI(`*`)
      kind: Rule
      priority: 12
      services:
      - name: minecraft
        port: #@ data.values.minecraft.port
        strategy: RoundRobin
